# wordle-engine

./: .gitignore  README.md  cli.py  pyproject.toml
.claude/worktrees/lucid-hypatia-d24916/.claude/: settings.local.json
.github/workflows/: ci.yml
data/: wordlist.txt
tests/: test_checker.py  test_game.py  test_words.py
wordle_engine/: __init__.py  checker.py  game.py  words.py
